--- a/1_KoneCafe/2_our_story.html
+++ b/1_KoneCafe/2_our_story.html
@@ -84,9 +84,9 @@
     <a href="javascript:;" class="btn_chat" title=""><img src="./assets/img/messenger.png" alt=""></a>
 </div>
 
-<div class="section_title_page">
+<!-- <div class="section_title_page">
     <h2 class="title_page">White & Yellow</h2>
-</div>
+</div> -->
 
 <div class="section_title_page">
     <h2 class="title_tr">Our Story</h2>
