--- a/1_KoneCafe/index.html
+++ b/1_KoneCafe/index.html
@@ -87,36 +87,66 @@
 <div class="section_container_img">
     <div class="container">
         <div class="row">
-            <h2 class="title_page">White & Yellow</h2>
-            <p class="description">The best place to kick off your day or just take a break and enjoy a <a href="" title=""> yummy breakfast</a></p>
+            <h2 class="title_page">KONE CAFE</h2>
+            <p class="description">Chốn nhẹ nhàng giữa lòng Hà Nội</p>
             <div class="element_content">
                 <div class="item">
+                  <a href="" class="img_link">
                     <img src="./assets/img/anh1.png" alt="">
+                  </a>
+                  <p class="title_link">
+                    work meet stay
+                  </p>
+                  <p class="flour">
+                    3rd flour
+                  </p>
                 </div>
                 <div class="item">
-                    <img src="./assets/img/anh2.png" alt="">
+                  <a href="" class="img_link">
+                    <img src="./assets/img/anh1.png" alt="">
+                  </a>
+                  <p class="title_link">
+                    work meet stay
+                  </p>
+                  <p class="flour">
+                    3rd flour
+                  </p>
                 </div>
                 <div class="item">
-                    <div class="text">
-                        <p>Our Special for </p>
-                        <p>Today - breakfast! </p>
-                        <p>All day. Every day. </p>
-                    </div>
+                  <a href="" class="img_link">
+                    <img src="./assets/img/anh1.png" alt="">
+                  </a>
+                  <p class="title_link">
+                    work meet stay
+                  </p>
+                  <p class="flour">
+                    3rd flour
+                  </p>
                 </div>
                 <div class="item">
-                    <img src="./assets/img/anh3.png" alt="">
+                  <a href="" class="img_link">
+                    <img src="./assets/img/anh1.png" alt="">
+                  </a>
+                  <p class="title_link">
+                    work meet stay
+                  </p>
+                  <p class="flour">
+                    3rd flour
+                  </p>
                 </div>
                 <div class="item">
-                    <img src="./assets/img/anh4.png" alt="">
+                  <a href="" class="img_link">
+                    <img src="./assets/img/anh1.png" alt="">
+                  </a>
+                  <p class="title_link">
+                    work meet stay
+                  </p>
+                  <p class="flour">
+                    3rd flour
+                  </p>
                 </div>
-                <div class="item">
-                    <img src="./assets/img/anh5.png" alt="">
-                </div>
-                <div class="item">
-                    <img src="./assets/img/anh6.png" alt="">
-                </div>
-                <div class="item">
-                    <img src="./assets/img/anh7.png" alt="">
+                <div class="item video">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/wGcj56QEuL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -184,7 +214,7 @@
                 </a>
                  </div>
               </div>
-              <div class=" blogBox moreBox">
+              <div class=" blogBox moreBox" style="display: none;">
                  <div class="item">
 
                    <a href="#myGallery" data-slide-to="6"><img class="img-thumbnail" src="./assets/img/anh3.png" title="">
@@ -194,7 +224,7 @@
                 </a>
                  </div>
               </div>
-              <div class=" blogBox moreBox">
+              <div class=" blogBox moreBox" style="display: none;">
                  <div class="item">
 
                    <a href="#myGallery" data-slide-to="7"><img class="img-thumbnail" src="./assets/img/anh4.png" title="">
